@@ -97,6 +97,7 @@ httpclient.requester-pays-buckets-enabled=false
 #filecomparer.skip-symlinks=false
 #filecomparer.use-md5-files=false
 #filecomparer.generate-md5-files=false
+#filecomparer.md5-files-root-dir=/custom/path/for/md5/files
 #filecomparer.skip-upload-of-md5-files=false
 #filecomparer.ignore-panic-dir-placeholders=false
 #filecomparer.assume-local-latest-in-mismatch=false
